Fix: TTF-973 - listing right aligned
https://digitaltools.phe.org.uk/browse/TTF-973

--- a/app/shared/components/List/style.scss
+++ b/app/shared/components/List/style.scss
@@ -209,6 +209,7 @@ $offset: 3.5rem;
 
         .list-item__inner {
           right: 0;
+          text-align: right;
         }
       }
     }
